<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/cottage"
        android:title="@string/navHome" />
    <item
        android:id="@+id/navTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ticket"
        android:title="@string/navTicket" />
    <item
        android:id="@+id/navAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/add"
        android:title="@string/navAdd" />
    <item
        android:id="@+id/navProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/custom_person_icon"
        android:title="@string/navProfile" />
</menu>